# kozan

./: .editorconfig  .gitattributes  .gitignore  .taplo.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  VISION.md  cliff.toml  release-plz.toml
_archive/crates/kozan-primitives/: Cargo.toml
_archive/crates/kozan-primitives/src/: lib.rs  timing.rs  units.rs
_archive/crates/kozan-scheduler/: Cargo.toml
_archive/crates/kozan-scheduler/src/: executor.rs  scheduler.rs  task.rs  timer.rs
_archive/crates/kozan-winit/: Cargo.toml
_archive/crates/kozan-winit/src/: handler.rs  host_impl.rs  lib.rs
crates/kozan/: Cargo.toml
crates/kozan-atom/: Cargo.toml
crates/kozan-atom/src/: lib.rs
crates/kozan-bench/: Cargo.toml
crates/kozan-bench/benches/: cascade.rs  keyword_match.rs  parse_inline.rs  parse_stylesheet.rs  profile_gaps.rs  selector.rs  selector_realworld.rs
crates/kozan-bench/examples/: profile_tailwind.rs
crates/kozan-bench/fixtures/: tailwind_full.css
crates/kozan-bench/src/: lib.rs
crates/kozan-build-utils/: Cargo.toml
crates/kozan-build-utils/src/: lib.rs  match_algo.rs  schema.rs  writer.rs
crates/kozan-canvas/: Cargo.toml
crates/kozan-canvas/src/: context.rs  image.rs  line.rs  op.rs  path.rs  recording.rs
crates/kozan-cascade/: Cargo.toml
crates/kozan-cascade/src/: cascade.rs  container.rs  custom_properties.rs  device.rs  layer.rs  lib.rs  media.rs  origin.rs  resolver.rs  restyle.rs  sharing_cache.rs  stylist.rs
crates/kozan-cascade/tests/: cascade_spec.rs  w3c_cascade.rs  w3c_custom_properties.rs
crates/kozan-core/: Cargo.toml
crates/kozan-core/assets/: ua.css
crates/kozan-core/src/: dirty_phases.rs  id.rs  lib.rs  lifecycle.rs  tree.rs
crates/kozan-core/src/compositor/: frame.rs  layer.rs  layer_builder.rs  layer_tree.rs  mod.rs  scrollbar_animation.rs  scrollbar_controller.rs  scrollbar_layer.rs
crates/kozan-core/src/dom/: attribute.rs  document.rs  document_cell.rs  element_data.rs  handle.rs  mod.rs  node.rs  text.rs  traits.rs
crates/kozan-core/src/events/: dispatcher.rs  event_target.rs  keyboard_event.rs  listener.rs  listener_map.rs  mod.rs  path.rs  store.rs  ui_event.rs
crates/kozan-core/src/frame/: frame_view.rs  local_frame.rs  mod.rs
crates/kozan-core/src/html/: html_anchor_element.rs  html_body_element.rs  html_button_element.rs  html_canvas_element.rs  html_div_element.rs  html_element.rs  html_form_element.rs  html_heading_element.rs  html_input_element.rs  html_list_elements.rs  html_select_element.rs  html_span_element.rs  mod.rs  replaced.rs
crates/kozan-core/src/input/: default_action.rs  keyboard.rs  mod.rs  modifiers.rs  mouse.rs  wheel.rs
crates/kozan-core/src/input_handler/: event_handler.rs  keyboard_event_manager.rs  mouse_event_manager.rs
crates/kozan-core/src/layout/: box_model.rs  document_layout.rs  fragment.rs  hit_test.rs  mod.rs  node_data.rs  result.rs
crates/kozan-core/src/page/: core.rs  focus_controller.rs  mod.rs  viewport.rs
crates/kozan-core/src/paint/: display_item.rs  display_list.rs  mod.rs  painter.rs  property_state.rs
crates/kozan-core/src/scroll/: controller.rs  mod.rs  node.rs  offsets.rs  tree.rs
crates/kozan-core/src/styling/: builder.rs  data.rs  engine.rs  mod.rs  node.rs  tests.rs  traits.rs  traversal.rs  units.rs
crates/kozan-core/src/widget/: event_handler.rs  frame_widget.rs  mod.rs  viewport.rs
crates/kozan-core/tests/: integration.rs  layout_fixtures.rs
crates/kozan-css/: Cargo.toml  build.rs
crates/kozan-css/src/: declaration.rs  error.rs  lib.rs  shorthand.rs  stylesheet.rs  var.rs
crates/kozan-css/src/properties/: animation.rs  border.rs  color.rs  content.rs  filter.rs  font.rs  geometry.rs  grid.rs  ident.rs  image.rs  length.rs  mod.rs  named_colors.rs  shadow.rs  svg.rs  text.rs  transform.rs  ui.rs  wrappers.rs
crates/kozan-css/src/rules/: container.rs  keyframes.rs  layer.rs  media.rs  misc.rs  mod.rs  supports.rs
crates/kozan-css/tests/: parse.rs  stylesheet.rs  w3c_parsing.rs
crates/kozan-devtools/: Cargo.toml
crates/kozan-devtools/assets/: devtools.css
crates/kozan-devtools/src/: chart.rs  lib.rs  metrics.rs  overlay.rs  performance.rs  shell.rs
crates/kozan-macros/: Cargo.toml
crates/kozan-macros/src/: crate_path.rs  derive_element.rs  derive_event.rs  lib.rs
crates/kozan-macros/tests/: macros_test.rs
crates/kozan-macros/tests/fail/: node_missing_field.rs
crates/kozan-platform/: Cargo.toml
crates/kozan-platform/src/: context.rs  event.rs  host.rs  id.rs  lib.rs  request.rs  time.rs  view_thread.rs  window_manager.rs  window_state.rs
crates/kozan-selector/: Cargo.toml
crates/kozan-selector/src/: attr.rs  bloom.rs  context.rs  element.rs  flags.rs  fxhash.rs  has_cache.rs  invalidation.rs  kleene.rs  lib.rs  matching.rs  nth.rs  nth_cache.rs  opaque.rs  parser.rs  pseudo_class.rs  pseudo_element.rs  rule_map.rs  spec_tests.rs  specificity.rs  types.rs  visitor.rs
crates/kozan-style/: Cargo.toml  build.rs
crates/kozan-style/schema/: properties.schema.json  types.schema.json  types.toml
crates/kozan-style/src/: animation.rs  border.rs  calc.rs  color.rs  content.rs  context.rs  declared.rs  filter.rs  font.rs  geometry.rs  grid.rs  helpers.rs  ident.rs  image.rs  lib.rs  shadow.rs  svg.rs  text.rs  traits.rs  transform.rs  ui.rs  wrappers.rs
crates/kozan-style/tests/: api.rs
crates/kozan-tree/: Cargo.toml
crates/kozan-tree/src/: iter.rs  lib.rs
crates/kozan-tree/tests/: tree.rs
crates/kozan-vello/: Cargo.toml
crates/kozan-vello/src/: lib.rs  renderer.rs  scene.rs  surface.rs
crates/kozan-winit/: Cargo.toml
crates/kozan-winit/src/: convert.rs  handler.rs  host_impl.rs  lib.rs
crates/kozan/src/: lib.rs  prelude.rs
examples/canvas-demo/: Cargo.toml
examples/canvas-demo/assets/: canvas-demo.html
examples/canvas-demo/src/: main.rs
examples/dashboard/: Cargo.toml
examples/dashboard/assets/: dashboard.html
examples/dashboard/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
(+203 files in other folders)
