[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
authors = ["Youssef Khalil <me@darky.dev>"]
repository = "https://github.com/kozan-rs/kozan"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
wildcard_imports = "allow"
float_cmp = "allow"
doc_markdown = "allow"
similar_names = "allow"
struct_field_names = "allow"
needless_pass_by_value = "allow"
uninlined_format_args = "allow"
items_after_statements = "allow"
unreadable_literal = "allow"
single_match_else = "allow"
match_same_arms = "allow"
trivially_copy_pass_by_ref = "allow"
manual_let_else = "allow"
unused_self = "allow"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
kozan-style = { version = "0.1", path = "crates/kozan-style" }

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2
