[package]
name = "kozan-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
kozan-css = { workspace = true }
kozan-style = { workspace = true }
kozan-style-macros = { workspace = true }
kozan-selector = { workspace = true }
kozan-atom = { workspace = true }
cssparser = { workspace = true }
criterion = { workspace = true }
lightningcss = { workspace = true }
selectors = { workspace = true }
cssparser_0_36 = { workspace = true }
string_cache = { workspace = true }
precomputed-hash = { workspace = true }
stylo = { workspace = true }
servo_arc = { workspace = true }
url = { workspace = true }

[[bench]]
name = "parse_inline"
harness = false

[[bench]]
name = "parse_stylesheet"
harness = false

[[bench]]
name = "keyword_match"
harness = false

[[bench]]
name = "selector"
harness = false

[[bench]]
name = "profile_gaps"
harness = false

[lints]
workspace = true
