[package]
name = "kozan-build-utils"
description = "Shared build-script utilities for Kozan codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1.1"
