[package]
name = "kozan-canvas"
description = "Renderer-agnostic Canvas 2D recording API for Kozan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kozan-primitives.workspace = true

[lints]
workspace = true
