[package]
name = "kozan-css"
description = "CSS parser for the Kozan UI platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kozan-style = { workspace = true }
kozan-style-macros = { workspace = true }
kozan-selector = { workspace = true }
kozan-atom = { workspace = true }
cssparser = { workspace = true }
smallvec = { workspace = true }
triomphe = { workspace = true }

[dev-dependencies]
serde_json = "1"

[build-dependencies]
kozan-build-utils = { workspace = true }
