[package]
name = "kozan-selector"
description = "CSS selector parsing and matching for the Kozan UI platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kozan-atom = { workspace = true, features = ["css-atoms"] }
kozan-style-macros = { workspace = true }
cssparser = { workspace = true }
smallvec = { workspace = true }
bitflags = { workspace = true }
triomphe = { workspace = true }

