[package]
name = "kozan-style"
description = "CSS style property types for the Kozan UI platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kozan-atom = { workspace = true }
kozan-style-macros = { workspace = true }
triomphe = { workspace = true }

[build-dependencies]
kozan-build-utils = { workspace = true }
