[package]
name = "kozan-tree"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Arena-backed tree with O(1) mutations and generational safety"

[dependencies]
# Zero external dependencies.

[lints]
workspace = true
