[package]
name = "kozan-vello"
description = "Vello + wgpu renderer backend for Kozan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kozan-canvas.workspace = true
kozan-core.workspace = true
kozan-platform.workspace = true
kozan-primitives.workspace = true

raw-window-handle = "0.6"
vello = "0.8"
pollster = "0.4"

[lints]
workspace = true
