[package]
name = "kozan-winit"
description = "winit backend for the Kozan UI platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kozan-core = { path = "../kozan-core" }
kozan-platform = { path = "../kozan-platform" }
winit = "0.30"

[lints]
workspace = true
