[package]
name = "kozan"
description = "Kozan UI platform — re-exports and prelude for application authors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kozan-core.workspace = true
kozan-platform.workspace = true
kozan-primitives.workspace = true
kozan-scheduler.workspace = true

# Optional backends — enabled by feature flag.
# Default: winit + vello (the standard app stack).
kozan-winit = { workspace = true, optional = true }
kozan-vello = { workspace = true, optional = true }

[features]
default = ["winit", "vello"]
winit   = ["dep:kozan-winit"]
vello   = ["dep:kozan-vello"]

[lints]
workspace = true
