[package]
name = "dashboard"
description = "Kozan dashboard — async tokio + complex layout demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kozan = { path = "../../crates/kozan" }

[lints]
workspace = true
